--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "server": "nodemon index.js",
-    "build": "npm install  && npm install --prefix frontend && npm run build --prefix frontend"
+    "build": "npm install  && npm install --prefix ../frontend && npm run build --prefix ../frontend"
   },
   "author": "Shanmukhi",
   "license": "ISC",
